--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.0",
+    "http-server": "^0.11.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -11,6 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "serve": "http-server ./build/",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
